added frontend file changes

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -56,7 +56,7 @@
       <div class="grid-1"><strong>Volume</strong></div>
       <div class="grid-2">{{ applicationSubmission.nfuFillVolume }} m<sup>3</sup></div>
       <div class="grid-1"><strong>Area</strong></div>
-      <div class="grid-2">{{ applicationSubmission.nfuTotalFillPlacement }} ha</div>
+      <div class="grid-2">{{ applicationSubmission.nfuTotalFillArea }} ha</div>
       <div class="grid-1"><strong>Maximum Depth</strong></div>
       <div class="grid-2">{{ applicationSubmission.nfuMaxFillDepth }} m</div>
       <div class="grid-1"><strong>Average Depth</strong></div>
