update timeline and decision emails

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
@@ -4,8 +4,7 @@
 <mat-dialog-content style="height: 100%">
   <div class="grid">
     <p>
-      This decision and document will be immediately visible to the Applicant and Local/First Nation Government. The
-      decision will be visible to the Public after the prescribed amount of days is exhausted.
+      This decision and document will be immediately visible to the Applicant and Local/First Nation Government.
     </p>
     <p>
       Upon releasing the decision, the application will be updated to the status:
