error outline on noi decision for Decision Maker field

--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -66,8 +66,15 @@
     </mat-form-field>
 
     <div>
-      <mat-label>Decision Maker*</mat-label>
-      <mat-button-toggle-group required id="decisionMaker" formControlName="decisionMaker">
+      <mat-label class="toggle-label">Decision Maker*</mat-label>
+      <mat-button-toggle-group
+        required
+        id="decisionMaker"
+        formControlName="decisionMaker"
+        [ngClass]="{
+          'error-field-outlined': !form.controls.decisionMaker.valid && form.controls.decisionMaker.touched
+        }"
+      >
         <mat-button-toggle value="CEO Delegate">CEO Delegate</mat-button-toggle>
         <mat-button-toggle value="CEO">CEO</mat-button-toggle>
       </mat-button-toggle-group>
