Review & Submit for Notifications
* Setup Step 7 for Review
* Fixes for other steps
* Add confirmation dialog to Proposal Step.

--- a/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/edit-submission.component.html
@@ -99,6 +99,16 @@
   </cdk-step>
   <cdk-step label="Review & Submit">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === steps.ReviewAndSubmit"></div>
+    <div *ngIf="cdkStepper.selectedIndex === steps.ReviewAndSubmit">
+      <app-review-and-submit
+        [$notificationSubmission]="$notificationSubmission"
+        [$notificationDocuments]="$notificationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+        (submit)='onSubmit()'
+      >
+      </app-review-and-submit>
+    </div>
   </cdk-step>
 </app-custom-stepper>
