Add search bar slide in animation and update toggle behaviour

--- a/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
+++ b/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
@@ -7,7 +7,7 @@
 >
   <mat-icon class="icon">search</mat-icon>
 </button>
-<div *ngIf="showInput" class="search-container">
+<div *ngIf="showInput" class="search-container" [@inAnimation]>
   <div class="search-bar">
     <mat-form-field class="search-input" appearance="outline">
       <input
