--- a/portal-frontend/src/app/features/home/notification-list/notification-list.component.html
+++ b/portal-frontend/src/app/features/home/notification-list/notification-list.component.html
@@ -6,11 +6,11 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" style='text-align: center' colspan="7">No NOIs Created</td>
+        <td class="mat-cell" style="text-align: center" colspan="7">No NOIs Created</td>
       </tr>
 
       <ng-container matColumnDef="fileNumber">
-        <th mat-header-cell *matHeaderCellDef>NOI ID</th>
+        <th mat-header-cell *matHeaderCellDef>Notification ID</th>
         <td mat-cell *matCellDef="let row">{{ row.fileNumber }}</td>
       </ng-container>
 
@@ -20,12 +20,12 @@
       </ng-container>
 
       <ng-container matColumnDef="applicant">
-        <th mat-header-cell *matHeaderCellDef>Owner Name</th>
+        <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let row">{{ row.applicant || '(Unknown)' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="applicationType">
-        <th mat-header-cell *matHeaderCellDef>NOI Type</th>
+        <th mat-header-cell *matHeaderCellDef>Type</th>
         <td mat-cell *matCellDef="let row">{{ row.type }}</td>
       </ng-container>
 
@@ -50,17 +50,12 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button
-            [routerLink]="'/notice-of-intent/' + row.fileNumber"
-            *ngIf="row.canView"
-            mat-flat-button
-            color="primary"
-          >
+          <button [routerLink]="'/notification/' + row.fileNumber" *ngIf="row.canView" mat-flat-button color="primary">
             View
           </button>
         </td>
       </ng-container>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of notice of intents"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of SRWs"></mat-paginator>
   </div>
 </div>
