--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
@@ -58,75 +58,96 @@
         </mat-button-toggle-group>
       </div>
       <mat-hint class="subtext"
-        >Note: The form will be updated with additional required questions if you are building a structure</mat-hint
-      >
+        >Note: The form will be updated with additional required questions if you are building a structure
+      </mat-hint>
     </div>
   </div>
 
   <ng-container *ngIf="confirmRemovalOfSoil">
     <div class="form-row">
       <div class="full-row">
-        <label>Provide the total floor area (m<sup>2</sup>) of the proposed structure(s) </label>
-        <table mat-table [dataSource]="structuresSource">
-          <ng-container matColumnDef="index">
-            <th mat-header-cell *matHeaderCellDef>#</th>
-            <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
-          </ng-container>
+        <form [formGroup]="lotsForm">
+          <label>Provide the total floor area (m<sup>2</sup>) of the proposed structure(s) </label>
+          <table mat-table [dataSource]="structuresSource">
+            <ng-container matColumnDef="index">
+              <th mat-header-cell *matHeaderCellDef>#</th>
+              <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
+            </ng-container>
 
-          <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef>Type</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field appearance="outline">
-                <mat-select
-                  [value]="element.type"
-                  placeholder="Please select"
-                  (valueChange)="onChangeStructureType(i, $event)"
+            <ng-container matColumnDef="type">
+              <th mat-header-cell *matHeaderCellDef>Type</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field appearance="outline">
+                  <mat-select
+                    [value]="element.type"
+                    placeholder="Please select"
+                    [formControlName]="i + '-type'"
+                    (valueChange)="onChangeStructureType()"
+                  >
+                    <mat-option *ngFor="let type of STRUCTURE_TYPES" [value]="type">
+                      {{ type }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <div
+                  *ngIf="
+                    lotsForm.controls[i + '-type']!.invalid &&
+                    (lotsForm.controls[i + '-type']!.dirty || lotsForm.controls[i + '-type']!.touched)
+                  "
+                  class="field-error"
                 >
-                  <mat-option *ngFor="let type of STRUCTURE_TYPES" [value]="type">
-                    {{ type }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </td>
-          </ng-container>
+                  <mat-icon>warning</mat-icon>
+                  <div *ngIf="lotsForm.controls[i + '-type']!.errors?.['required']">This field is required</div>
+                </div>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="area">
-            <th mat-header-cell *matHeaderCellDef>Total Floor Area</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field appearance="outline">
-                <input
-                  [(ngModel)]="element.area"
-                  type="text"
-                  matInput
-                  thousandSeparator=","
-                  mask="separator.2"
-                  separatorLimit="9999999999"
-                  min="0.01"
-                  placeholder="Type area"
-                  [ngModelOptions]="{ standalone: true }"
-                  (ngModelChange)="onAreaChange()"
-                />
-                <span matTextSuffix>m<sup>2</sup></span>
-              </mat-form-field>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="area">
+              <th mat-header-cell *matHeaderCellDef>Total Floor Area</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field appearance="outline">
+                  <input
+                    type="text"
+                    matInput
+                    thousandSeparator=","
+                    mask="separator.2"
+                    separatorLimit="9999999999"
+                    min="0.01"
+                    placeholder="Type area"
+                    [formControlName]="i + '-area'"
+                  />
+                  <span matTextSuffix>m<sup>2</sup></span>
+                </mat-form-field>
+                <div
+                  *ngIf="
+                    lotsForm.controls[i + '-area']!.invalid &&
+                    (lotsForm.controls[i + '-area']!.dirty || lotsForm.controls[i + '-area']!.touched)
+                  "
+                  class="field-error"
+                >
+                  <mat-icon>warning</mat-icon>
+                  <div *ngIf="lotsForm.controls[i + '-area']!.errors?.['required']">This field is required</div>
+                </div>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <button mat-stroked-button color="accent" (click)="onStructureRemove(i)" type="button">Remove</button>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef>Action</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <button mat-stroked-button color="accent" (click)="onStructureRemove(i)" type="button">Remove</button>
+              </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-          <tr class="mat-row no-data" *matNoDataRow>
-            <td class="text-center" colspan="7">
-              No Proposed Structures Entered. Use the button below to add your first structure.
-            </td>
-          </tr>
-        </table>
+            <tr class="mat-row no-data" *matNoDataRow>
+              <td class="text-center" colspan="7">
+                No Proposed Structures Entered. Use the button below to add your first structure.
+              </td>
+            </tr>
+          </table>
+        </form>
       </div>
     </div>
 
