--- a/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -20,7 +20,7 @@
       best of my/our knowledge, true and correct.
     </mat-checkbox>
     <mat-checkbox #checkbox4 color="primary" class="checkbox">
-      check_box I/we understand that the Agricultural Land Commission will take the steps necessary to confirm the
+      I/we understand that the Agricultural Land Commission will take the steps necessary to confirm the
       accuracy of the information and documents provided. This information will be available for review by any member of
       the public.
     </mat-checkbox>
