--- a/portal-frontend/src/app/features/notifications/view-submission/view-notification-submission.component.html
+++ b/portal-frontend/src/app/features/notifications/view-submission/view-notification-submission.component.html
@@ -82,8 +82,13 @@
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="ALC Review and Response">
-        <div class="content">//TODO</div>
+      <mat-tab label="ALC Review and Decision">
+        <div class="content">
+          <app-alc-review
+            [$notificationDocuments]="$notificationDocuments"
+            [$notificationSubmission]="$notificationSubmission"
+          ></app-alc-review>
+        </div>
       </mat-tab>
     </mat-tab-group>
   </div>
