Add Preview State for NOIs

--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -10,8 +10,21 @@
       [submissionStatusService]="noticeOfIntentStatusService"
     ></app-details-header>
     <div class="content">
-      <div class="nav">
+      <div *ngIf='!isApplicantSubmission || showSubmittedToAlcMenuItems' class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
+          <div
+            [routerLink]="route.path ? route.path : './'"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: route.path === '' }"
+            class="nav-item nav-text"
+          >
+            <mat-icon>{{ route.icon }}</mat-icon>
+            {{ route.menuTitle }}
+          </div>
+        </div>
+      </div>
+      <div *ngIf='isApplicantSubmission && !showSubmittedToAlcMenuItems' class="nav">
+        <div *ngFor="let route of preSubmissionRoute" class="nav-link">
           <div
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
