--- a/alcs-frontend/src/app/shared/details-header/details-header.component.html
+++ b/alcs-frontend/src/app/shared/details-header/details-header.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div>
-      <ng-container *ngIf="!_application.hasOwnProperty('decisionDate')">
+      <ng-container *ngIf="isTimeTrackable && !_application.hasOwnProperty('decisionDate')">
         <div class="subheading2">{{ days }}:</div>
         <app-time-tracker [data]="_application" [maxActiveDays]="isNOI ? 61 : undefined"></app-time-tracker>
       </ng-container>
