--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
@@ -78,16 +78,12 @@
     }
   }
 
-  .adjacent-parcels {
+  .transferee-table {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
+    grid-template-columns: max-content max-content max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
-
-    .full-width {
-      grid-column: 1/4;
-    }
   }
 
   .review-table {
