--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -1,10 +1,12 @@
 <div class="layout">
   <div class="application">
     <app-details-header
+      *ngIf='noticeOfIntent'
       heading="Notice of Intent"
       [application]="noticeOfIntent"
       [reconsiderations]="[]"
       [modifications]="modifications"
+      [types]='[noticeOfIntent.type]'
       days="Calendar Days"
       [showStatus]="true"
       [submissionStatusService]="noticeOfIntentStatusService"
