--- a/alcs-frontend/src/app/features/notification/notification.component.html
+++ b/alcs-frontend/src/app/features/notification/notification.component.html
@@ -1,9 +1,10 @@
 <div class="layout">
   <div class="application">
     <app-details-header
+      *ngIf="notification"
       heading="Notification"
       [application]="notification"
-      [reconsiderations]="[]"
+      [types]="[notification.type]"
       days="Calendar Days"
       [showStatus]="true"
       [submissionStatusService]="notificationSubmissionStatusService"
