--- a/alcs-frontend/src/app/features/notification/overview/overview.component.html
+++ b/alcs-frontend/src/app/features/notification/overview/overview.component.html
@@ -1,4 +1,14 @@
-<h3>Overview</h3>
+<div class="split">
+  <h3>Overview</h3>
+  <div>
+    <button *ngIf="!isCancelled" type="button" mat-stroked-button color="warn" (click)="onCancel()">
+      Cancel Notification
+    </button>
+    <button *ngIf="isCancelled" type="button" mat-stroked-button color="primary" (click)="onUncancel()">
+      Uncancel Notification
+    </button>
+  </div>
+</div>
 <section>
   <h5>Proposal Summary</h5>
   <app-inline-edit
