--- a/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/parcel/parcel.component.html
@@ -2,7 +2,7 @@
 <div class="review-table">
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width flex-space-between-wrap">
-      <h4>Parcel {{ parcelInd + 1 }}: Parcel and Owner Information</h4>
+      <h4>Parcel {{ parcelInd + 1 }} Information</h4>
       <div>
         <button
           *ngIf="showEdit"
