--- a/alcs-frontend/src/app/features/notification/applicant-info/notification-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/notification/applicant-info/notification-details/parcel/parcel.component.html
@@ -3,9 +3,8 @@
 <div class="review-table">
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width flex-space-between-wrap">
-      <h4 [id]="parcel.uuid">Parcel {{ parcelInd + 1 }}: Parcel and Owner Information</h4>
+      <h4 [id]="parcel.uuid">Parcel {{ parcelInd + 1 }} Information</h4>
     </div>
-    <div class="full-width subheading1">Parcel Information</div>
     <div class="subheading2 grid-1">Ownership Type</div>
     <div class="grid-double">
       {{ parcel.ownershipType?.label }}
