Add Virus Scanning to ALCS

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-file-upload-dialog/decision-document-upload-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-file-upload-dialog/decision-document-upload-dialog.component.html
@@ -9,10 +9,13 @@
       </div>
       <input hidden type="file" #fileInput (change)="uploadFile($event)" placeholder="Upload file" />
       <button
+        *ngIf="!pendingFile && !existingFile"
         class="full-width upload-button"
         mat-flat-button
         color="accent"
-        *ngIf="!pendingFile && !existingFile"
+        [ngClass]="{
+          error: showVirusError
+        }"
         (click)="fileInput.click()"
       >
         Upload
@@ -34,6 +37,9 @@
           <mat-icon>close</mat-icon>Remove
         </button>
       </div>
+      <mat-error class="left" style="display: flex" *ngIf="showVirusError">
+        <mat-icon>warning</mat-icon>&nbsp;A virus was detected in the file. Choose another file and try again.
+      </mat-error>
     </div>
 
     <div class="double">
