--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-file-upload-dialog/decision-document-upload-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-file-upload-dialog/decision-document-upload-dialog.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../../../../styles/colors';
+
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -28,6 +30,10 @@ a {
 
 .upload-button {
   margin-top: 6px !important;
+
+  &.error {
+    border: 2px solid colors.$error-color;
+  }
 }
 
 .spinner {
