Set Structure Types Directly on Value Change

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
@@ -82,7 +82,7 @@
                     [value]="element.type"
                     placeholder="Please select"
                     [formControlName]="i + '-type'"
-                    (valueChange)="onChangeStructureType()"
+                    (valueChange)="onChangeStructureType(i, $event)"
                   >
                     <mat-option *ngFor="let type of STRUCTURE_TYPES" [value]="type">
                       {{ type }}
