--- a/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
@@ -4,7 +4,8 @@
 <mat-dialog-content style="height: 100%">
   <div class="grid">
     <p>
-      This decision and document will be immediately visible to the Applicant and Local/First Nation Government.
+      This decision and document will be immediately visible to the Applicant, Local/First Nation Government, and
+      Public.
     </p>
     <p>
       Upon releasing the decision, the application will be updated to the status:
