--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/release-dialog/release-dialog.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision-v2/release-dialog/release-dialog.component.html
@@ -3,7 +3,10 @@
 </div>
 <mat-dialog-content style="height: 100%">
   <div class="grid">
-    <p>This decision and document will be immediately visible to the Applicant and Local/First Nation Government.</p>
+    <p>
+      This decision and document will be immediately visible to the Applicant, Local/First Nation Government, and
+      Public.
+    </p>
     <p>
       Upon releasing the decision, the application will be updated to the status:
       <app-application-type-pill *ngIf="mappedType" [type]="mappedType"></app-application-type-pill>
